# tina-lang

./: .gitignore  CMakeLists.txt  README.md  main.cpp
doc/etc/: etc.md
doc/googletest/: how_to_write_google_test.md
doc/llvm/: function_pass_manager.md  how_embedding_LLVM_to_your_project.md
include/: ast.h  client.h  common.h  db.h  jit.h  parser.h
lib/: client.cpp  db.cpp
test/: tina_test.cpp
